--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/load-components.ts"
+    "build": "tsc",
+    "dev": "concurrently \"tsc --watch\" \"nodemon server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "16.4.5",
     "express": "^4.21.1",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.0",
+    "npx": "^3.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
